--- a/singleView.html
+++ b/singleView.html
@@ -2,7 +2,7 @@
 <html>
   <meta charset="UTF-8">
   <head>
-    <title>Pañata</title>
+    <title>Panache</title>
     <!-- type="text/javascript" est l'option par defaut dans HTML5 -->
     <script type="text/javascript" src="d3js/d3.min.js"></script>
   </head>
