--- a/singleView.html
+++ b/singleView.html
@@ -5,6 +5,7 @@
     <title>Panache</title>
     <!-- type="text/javascript" est l'option par defaut dans HTML5 -->
     <script type="text/javascript" src="d3js/d3.min.js"></script>
+    <script type="text/javascript" src="Pixi/pixi.min.js"></script>
   </head>
   <!-- Important de faire l'import apres sinon la librairie n'est pas chargee a temps pour le script -->
   <body>
