--- a/singleView.html
+++ b/singleView.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="d3js/d3.min.js"></script>
     <script type="text/javascript" src="Pixi/pixi.min.js"></script>
   </head>
-  <!-- Important de faire l'import apres sinon la librairie n'est pas chargee a temps pour le script -->
+  <!-- Important: the import of Panache's script must be done later, so that the libraries are already loaded when it comes to it -->
   <body>
     <script type="text/javascript" src="singleView.js"></script>
   </body>
