Got rid of the PIXI part to focus only on modularisation

--- a/singleView.html
+++ b/singleView.html
@@ -4,11 +4,10 @@
   <head>
     <title>Panache</title>
     <!-- type="text/javascript" est l'option par defaut dans HTML5 -->
-    <script type="text/javascript" src="d3js/d3.min.js"></script>
-    <script type="text/javascript" src="Pixi/pixi.min.js"></script>
+    <script type="text/javascript" src="d3js/d3.js"></script>
   </head>
   <!-- Important de faire l'import apres sinon la librairie n'est pas chargee a temps pour le script -->
   <body>
-    <script type="text/javascript" src="singleView.js"></script>
+    <script type="module" src="singleView.js"></script>
   </body>
 </html>
